Updated Docker Image

--- a/userprofile-deployment.yml
+++ b/userprofile-deployment.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: usernode-js
-        image: dockerimageyour:latest
+        image: saiteja2502/userprofileretail:latest
         ports:
         - containerPort: 3130  # Change to match your app's port
         env:
