added secrets in azure key vault and updated manifest files

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGODB-URI=mongodb://localhost:27017/myDatabase
+MONGODB-URI=mongodb://mongodb:27017/myDatabase
 SESSION-SECRET=1234
 PORT=3130
 EMAIL-USER=chagantyteja2502@gmail.com
