--- a/retail-app-chart/values.yaml
+++ b/retail-app-chart/values.yaml
@@ -72,3 +72,14 @@ keyVault:
     - name: EmailPassword
       dataKey: EmailPassword
       k8sSecretName: email-password-secret
+
+# Ingress configuration
+ingress:
+  ingressName: retail-ingress
+  namespace: akv-test
+  sslRedirect: "false"
+  ingressClassName: nginx
+  ingressPath: /
+  ingressPathType: ImplementationSpecific
+  serviceName: usernode-js-service
+  servicePort: 3130
